only include myanimelist ids with valid synopsis and score, and changed how fake anime show fake stats