@@ -3,6 +3,7 @@ package com.example.demo.services;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,6 +14,8 @@ import org.springframework.web.reactive.function.client.WebClient;
 
 import com.example.demo.dto.AnimeAPIResponse;
 import com.example.demo.dto.AnimeHiddenDTO;
+import com.example.demo.dto.AnimeListAPIResponse;
+import com.example.demo.dto.AnimeAPIResponse.AnimeAPIData;
 import com.example.demo.models.Anime;
 import com.example.demo.repositories.AnimeRepository;
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -41,18 +44,27 @@ public class AnimeService {
     // Randomly get an existing summary
     Integer next = random.nextInt(10);
     Anime anime = new Anime();
-    if (next > 10) { // 50%
-      // Generate new summary for an existing one
-      // Get random anime
-    } else if (next > 10){ // 50%
-      // Generate new summary for a fake one
+    Boolean real = false;
+    if (next >= 5) { // 50%
+      // Summary for an existing anime
+      anime = animeRepository.findRandomRealAnime();
+      real = true;
     } else { // 50%
-      // Get an existing one from MongoDB
+      // Summary for a fake anime
+      anime = animeRepository.findRandomFakeAnime();
     }
-
-    // animeRepository.save(new Anime(null, "test", "testsum", "testname", "testmalid", 0, 0));
-    // animeRepository.findAll().stream().map(a -> modelMapper.map(a, AnimeHiddenDTO.class)).collect(Collectors.toList())
-    return modelMapper.map(anime, AnimeHiddenDTO.class);
+    // Get data from MyAnimeList API
+    AnimeAPIData apiData = webClient.get().uri(String.format("/anime/%s", anime.getMalId())).retrieve().bodyToMono(AnimeAPIResponse.class).block().getData();
+    if (real) {
+      anime.setGenres(apiData.getGenres().stream().map(g -> g.getName()).toList());
+      anime.setType(apiData.getType());
+    }
+    AnimeHiddenDTO res = modelMapper.map(anime, AnimeHiddenDTO.class);
+    res.setMembers(apiData.getMembers());
+    res.setScore(apiData.getScore());
+    res.setYear(apiData.getYear());
+    
+    return res;
   }
 
   public List<String> getListOfRandomMALURLs() {
@@ -63,8 +75,8 @@ public class AnimeService {
       reqs.add(webClient.get().uri("/random/anime").retrieve().bodyToMono(AnimeAPIResponse.class));
     }
 
-    // Wait for all to complete
-    List<String> urls = Flux.fromIterable(reqs).flatMap(mono -> mono).map(response -> response.getData().getUrl()).collectList().block();
+    // Wait for all to complete, filter out anime with no synopsis or score
+    List<String> urls = Flux.fromIterable(reqs).flatMap(mono -> mono).filter(response -> response.getData().getSynopsis() != null && response.getData().getScore() != null).map(response -> response.getData().getUrl()).collectList().block();
 
     return urls;
   }
@@ -80,47 +92,58 @@ public class AnimeService {
   }
 
   public void createFakeAnime() throws IOException {
-    // Rules to make random numbers more believable
-    Integer MIN_MEMBERS = 10000;
-    Integer MEAN_MEMBERS = 200000;
-    Integer MAX_MEMBERS = 3900000;
-    Integer MIN_YEAR = 1970;
-    Integer MAX_YEAR = 2024;
-    Double MIN_SCORE = 1.8;
-    Double MEAN_SCORE = 7.2;
-    Integer MAX_SCORE = 9;
-
     Resource resource = new ClassPathResource("fakeSummaries.json");
     List<Anime> animes = objectMapper.readValue(resource.getInputStream(), new TypeReference<List<Anime>>() {});
+    Integer OVA_PAGES = 137;
+    Integer TV_PAGES = 193;
+    Integer MOVIE_PAGES = 107;
+    Integer SPECIAL_PAGES = 59;
+    Integer ONA_PAGES = 84;
+    Integer MUSIC_PAGES = 79;
+    Integer CM_PAGES = 13;
+    Integer PV_PAGES = 6;
+    Integer TV_SPECIAL_PAGES = 22;
+
+    Map<String, Integer> PAGES_MAP = Map.of(
+      "OVA", OVA_PAGES,
+      "TV", TV_PAGES,
+      "Movie", MOVIE_PAGES,
+      "Special", SPECIAL_PAGES,
+      "ONA", ONA_PAGES,
+      "Music", MUSIC_PAGES,
+      "CM", CM_PAGES,
+      "PV", PV_PAGES,
+      "TV Special", TV_SPECIAL_PAGES
+    );
+
+    Integer PER_PAGE = 25; // items per page
+
+
     for (Anime anime : animes) {
       anime.setAiVotes(0);
       anime.setRealVotes(0);
-      Double score = generateNormalDistributedNumber(random, MIN_SCORE, MAX_SCORE, MEAN_SCORE);
-      anime.setScore(score);
-      if (score > 6.5) {
-        // If not bad anime, uniform distribution
-        anime.setMembers(random.nextInt(MEAN_MEMBERS, MAX_MEMBERS));
-      } else {
-        // If bad, normal distribution
-        anime.setMembers(generateNormalDistributedNumber(random, MIN_MEMBERS.doubleValue(), MAX_MEMBERS, MEAN_MEMBERS.doubleValue()).intValue());
-      }
-      anime.setYear(random.nextInt(MIN_YEAR, MAX_YEAR + 1));
       anime.setGenres(anime.getGenres().subList(0, random.nextInt(1, anime.getGenres().size() + 1)));
+      
+      // Get random MyAnimeList ID with same type to fake score, members, and year
+      Integer page = random.nextInt(1, PAGES_MAP.get(anime.getType()));
+      // Only include where score exists
+      List<AnimeAPIData> apiData = webClient.get().uri(String.format("anime?type=%s&min_score=0.1&page=%d", anime.getType().toLowerCase(), page)).retrieve().bodyToMono(AnimeListAPIResponse.class).block().getData();
+      Boolean found = false;
+      Integer tries = 0;
+      // Only include where synopsis exists
+      while (!found && tries < PER_PAGE) {
+        Integer item = random.nextInt(PER_PAGE - tries);
+        AnimeAPIData test = apiData.get(item);
+        if (test.getSynopsis() != null) {
+          found = true;
+          anime.setMalId(test.getMal_id());
+        } else {
+          apiData.remove(item.intValue());
+          tries += 1;
+        }
+      }
     }
     animeRepository.saveAll(animes);
   }
-
-  public static Double generateNormalDistributedNumber(Random random, Double min, int max, Double mean) {
-    // Calculate the standard deviation (you can adjust this value)
-    Double stdDev = mean / 3;
-    
-    // Generate a normally distributed number
-    Double result;
-    do {
-        result = random.nextGaussian() * stdDev + mean;
-    } while (result < min || result > max);
-    
-    return result;
-}
 
 }
